@@ -1,5 +1,7 @@
 ###### TWE 5.5-1 RELEASED ######
 2016-12-09 Sasa Bojanic <sasaboy@together.at>
+   # Fixed: click on + of Subflow/Activity Set didn't descend into them when graph is Zoomed In/Out
+   # Fixed: finally properly fixed the issue when transition is selected when clicked on the activity
    # Shark mode: Improved XPDLStringVariable handling (now when Id of referenced variable changes, the GUI immediately reflects the change in the 
                  content of the variable that references it)
 
